登录注册功能完成

--- a/home/login.html
+++ b/home/login.html
@@ -70,7 +70,9 @@
     <!-- 引入layui的js文件 -->
     <script src="../assets/lib/layui/layui.all.js"></script>
     <!-- 引入jQ -->
-    <script src="../assets/lib/jquery.js"></script>
+    <script src="/大事件/01/assets/lib/jquery.js"></script>
+
+    <script src="/大事件/01/assets/js/ajaxConfig.js"></script>
 
     <!-- 自己的 -->
     <script src="/大事件/01/assets/js/login.js"></script>
