--- a/home/index.html
+++ b/home/index.html
@@ -1,15 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>大事件</title>
+    <link rel="stylesheet" href="/大事件/01/assets/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="/大事件/01/assets/css/index.css">
 </head>
 
-<body>
-    <h1>嘿嘿嘿</h1>
-    11111
+<body class="layui-layout-body">
+    <div class="layui-layout layui-layout-admin">
+        <div class="layui-header">
+            <div class="layui-logo">
+                <img src="/大事件/01/assets/images/logo.png" alt="">
+            </div>
+            <!-- 头部区域（可配合layui已有的水平导航） -->
+
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item">
+                    <a href="javascript:;">
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                        <span class="textResult"></span> 个人中心
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;">基本资料</a></dd>
+                        <dd><a href="javascript">更换头像</a></dd>
+                        <dd><a href="javascript">重置密码</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item"><a href="javascript:;" id="berakBtn"><span class="layui-icon layui-icon-logout"></span>退出</a></li>
+            </ul>
+        </div>
+
+        <div class="layui-side layui-bg-black">
+            <div class="layui-side-scroll">
+                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+                <ul class="layui-nav layui-nav-tree " lay-filter="test  " lay-shrink="all">
+                    <!-- 头像和昵称区域 -->
+                    <div class="userInfo">
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                        <span class="textResult"></span>
+                        <span class="text" id="welcome">欢迎 </span>
+                    </div>
+                    <li class="layui-nav-item  layui-this">
+                        <a href="/大事件/01/home/dashboard.html" target="layuiBody">
+                            <span class="layui-icon layui-icon-home"></span> 首页
+                        </a>
+                    </li>
+                    <li class="layui-nav-item ">
+
+                        <a class="" href="javascript:;"> <span class="layui-icon  layui-icon-list"></span>文章管理 </a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;"><span class="layui-icon icon layui-icon-app"></span>文章类别</a></dd>
+                            <dd><a href="javascript:;"><span class="layui-icon icon layui-icon-app"></span>文章列表</a></dd>
+                            <dd><a href="javascript:;"><span class="layui-icon icon  layui-icon-app"></span>发表文章</a></dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"><span class="layui-icon  layui-icon-user"></span>个人中心</a>
+                        <dl class="layui-nav-child">
+                            <dd><a href="javascript:;"><span class="layui-icon icon layui-icon-app"></span>基本资料</a></dd>
+                            <dd><a href="javascript:;"><span class="layui-icon icon layui-icon-app"></span>更换头像</a></dd>
+                            <dd><a href="javascript:;"><span class="layui-icon icon layui-icon-app"></span>重置密码</a></dd>
+
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="layui-body">
+            <!-- 内容主体区域 -->
+            <iframe width="100%" height="100%" name="layuiBody" src="/大事件/01/home/dashboard.html" frameborder="0"></iframe>
+        </div>
+
+        <div class="layui-footer">
+            <!-- 底部固定区域 -->
+            © www.itheima.com - 黑马程序员
+        </div>
+    </div>
+    <script src="/大事件/01/assets/lib/layui/layui.all.js"></script>
+    <script src="/大事件/01/assets/lib/jquery.js"></script>
+    <script src="/大事件/01/assets/js/ajaxConfig.js"></script>
+    <script src="/大事件/01/assets/js/index.js"></script>
+
 </body>
 
 </html>
