个人中心完成

--- a/home/index.html
+++ b/home/index.html
@@ -60,9 +60,11 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="layui-icon  layui-icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><span class="layui-icon icon layui-icon-app"></span>基本资料</a></dd>
-                            <dd><a href="javascript:;"><span class="layui-icon icon layui-icon-app"></span>更换头像</a></dd>
-                            <dd><a href="javascript:;"><span class="layui-icon icon layui-icon-app"></span>重置密码</a></dd>
+                            <dd><a href="/大事件/01/home/user/user_information.html" target="layuiBody"><span class="layui-icon icon layui-icon-app"></span>基本资料</a></dd>
+                            <dd><a href="/大事件/01/home/user/user_head portrait.html " target="layuiBody"><span class="layui-icon icon layui-icon-app"></span>更换头像</a></dd>
+                            <dd>
+                                <a href="/大事件/01/home/user/user_pwd.html " target="layuiBody"> <span class="layui-icon icon layui-icon-app"></span>重置密码</a>
+                            </dd>
 
                         </dl>
                     </li>
@@ -72,7 +74,10 @@
 
         <div class="layui-body">
             <!-- 内容主体区域 -->
-            <iframe width="100%" height="100%" name="layuiBody" src="/大事件/01/home/dashboard.html" frameborder="0"></iframe>
+            <!-- <iframe width="100%" height="100%" name="layuiBody" src="/大事件/01/home/dashboard.html" frameborder="0"></iframe>
+             -->
+            <iframe width="100%" height="100%" name="layuiBody" src="/大事件/01/home/user/user_head portrait.html" frameborder="0"></iframe>
+
         </div>
 
         <div class="layui-footer">
